[package]
name = "tgt-intro-woox"
version = "0.1.0"
edition = "2024"

[dependencies]
error = "0.1.9"
reqwest = { version = "0.13.1", features = ["blocking", "query", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.8"
